[FGAP] Add adminPermissionClientCheck to authorization services REST endpoints
Closes #35945

Signed-off-by: vramik <vramik@redhat.com>