@@ -16,26 +16,31 @@
  */
 package org.keycloak.authorization;
 
-import java.util.Arrays;
-import java.util.HashSet;
+import java.util.Map;
+import java.util.Optional;
+import java.util.Set;
 
 import org.keycloak.authorization.model.Resource;
 import org.keycloak.authorization.model.ResourceServer;
+import org.keycloak.authorization.model.Scope;
 import org.keycloak.authorization.store.StoreFactory;
-import org.keycloak.models.ClientModel;
 import org.keycloak.models.KeycloakSession;
+import org.keycloak.models.ModelValidationException;
 import org.keycloak.models.RealmModel;
 import org.keycloak.models.UserModel;
+import org.keycloak.representations.idm.authorization.AbstractPolicyRepresentation;
 import org.keycloak.representations.idm.authorization.AuthorizationSchema;
 import org.keycloak.representations.idm.authorization.ResourceType;
+import org.keycloak.representations.idm.authorization.ScopePermissionRepresentation;
 
-public class AdminPermissionsAuthorizationSchema extends AuthorizationSchema {
+public class AdminPermissionsSchema extends AuthorizationSchema {
 
-    public static final ResourceType USERS = new ResourceType("Users", new HashSet<>(Arrays.asList("manage")));
-    public static final AdminPermissionsAuthorizationSchema INSTANCE = new AdminPermissionsAuthorizationSchema();
+    public static final String USERS_RESOURCE_TYPE = "Users";
+    public static final ResourceType USERS = new ResourceType(USERS_RESOURCE_TYPE, Set.of("manage"));
+    public static final AdminPermissionsSchema SCHEMA = new AdminPermissionsSchema();
 
-    private AdminPermissionsAuthorizationSchema() {
-        super(USERS);
+    private AdminPermissionsSchema() {
+        super(Map.of(USERS_RESOURCE_TYPE, USERS));
     }
 
     public Resource getOrCreateResource(KeycloakSession session, ResourceServer resourceServer, String type, String id) {
@@ -71,13 +76,17 @@ public class AdminPermissionsAuthorizationSchema extends AuthorizationSchema {
             return false;
         }
 
-        ClientModel permissionClient = realm.getAdminPermissionsClient();
+        return isAdminPermissionClient(realm, resourceServer.getId());
+    }
 
-        if (permissionClient == null) {
-            throw new IllegalStateException("Permission client not found");
+    private boolean isAdminPermissionClient(RealmModel realm, String id) {
+        return realm.getAdminPermissionsClient() != null && realm.getAdminPermissionsClient().getId().equals(id);
+    }
+
+    public void throwExceptionIfAdminPermissionClient(KeycloakSession session, String id) {
+        if (isAdminPermissionClient(session.getContext().getRealm(), id)) {
+            throw new ModelValidationException("Not supported for this client.");
         }
-
-        return resourceServer.getId().equals(permissionClient.getId());
     }
 
     private Resource getOrCreateResource(KeycloakSession session, ResourceServer resourceServer, String id) {
@@ -105,5 +114,36 @@ public class AdminPermissionsAuthorizationSchema extends AuthorizationSchema {
     private StoreFactory getStoreFactory(KeycloakSession session) {
         AuthorizationProvider authzProvider = session.getProvider(AuthorizationProvider.class);
         return authzProvider.getStoreFactory();
+    }
+
+    public void throwExceptionIfResourceTypeOrScopesNotProvided(KeycloakSession session, ResourceServer resourceServer, AbstractPolicyRepresentation rep) {
+        if (!supportsAuthorizationSchema(session, resourceServer)) {
+            return;
+        }
+        if (rep instanceof ScopePermissionRepresentation) {
+            if (rep.getResourceType() == null || SCHEMA.getResourceTypes().get(rep.getResourceType()) == null) {
+                throw new ModelValidationException("Resource type not provided.");
+            }
+            if (rep.getScopes() == null || rep.getScopes().isEmpty()) {
+                throw new ModelValidationException("Scopes not provided.");
+            }
+        }
+    }
+
+    public Scope getScope(KeycloakSession session, ResourceServer resourceServer, String resourceType, String id) {
+        StoreFactory storeFactory = getStoreFactory(session);
+
+        Scope scope = Optional.ofNullable(storeFactory.getScopeStore().findById(resourceServer, id))
+            .or(() -> Optional.ofNullable(storeFactory.getScopeStore().findByName(resourceServer, id)))
+            .orElseThrow(() -> new ModelValidationException(String.format("Scope [%s] does not exist.", id)));
+
+        if (supportsAuthorizationSchema(session, resourceServer)) {
+            //validations for schema
+            if (!SCHEMA.getResourceTypes().get(resourceType).getScopes().contains(scope.getName())) {
+                throw new ModelValidationException(String.format("Scope %s was not found for resource type %s.", scope.getName(), resourceType));
+            }
+        }
+
+        return scope;
     }
 }
